...
    <string name="account_already_register">Account already register</string>
    <string name="user_not_found_401">User not found. or not matched password. try again.</string>
    <string name="youre_image_placeholder">Youre image placeholder</string>
    <string name="what_are_you_thinking">What are you thinking?</string>
    <string name="home">Home</string>
    <string name="map">Maps</string>
    <string name="invalid_email">Use valid email</string>
    <string name="invalid_password">Password at least 8 characters</string>
    <string name="style_parsing_failed">Style parsing failed.</string>
    <string name="error_cannot_find_style_maps">Error. cannot find style</string>
    <string name="share_your_location">Share your location</string>
    <string name="location_is_not_found">Location is not found. please try again</string>
    <string name="retry">Retry</string>
</resources>
