...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:startIconDrawable="@drawable/ic_email_24"
                tools:alpha="100">

                <com.example.storyapp.ui.customView.MyEditTextEmail
                    android:id="@+id/ed_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_password_layout"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_login_email_layout"
                app:startIconDrawable="@drawable/ic_password_24"
                tools:alpha="100">

                <com.example.storyapp.ui.customView.MyEditTextPassword
                    android:id="@+id/ed_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
...
